--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "dotenv-webpack": "^8.0.1",
     "vite": "^2.0.5"
   },
   "dependencies": {
-    "firebase": "^8.2.10"
+    "firebase": "^8.2.10",
+    "react-scripts": "^0.2.3"
   }
 }
